@@ -1,4 +1,5 @@
 Changes in QMPlay2 build 17.07.20:
+	- Tekstowo: minor improvement,
 	- don't delete Radio settings,
 	- fix YouTube images,
 
